--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -10,6 +10,6 @@
       <%= prototype.catch_copy %>
     </p>
     
-    <%= link_to "by #{prototype.user.name}", user_path(prototype.user), class: "prototype__user" %>
+    <%= link_to "by #{prototype.user.name}", user_path(prototype.user), class: "prototype_user" %>
   </div>
 </div>
