--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -42,8 +42,9 @@
       <h3></h3>
       <% @comments.each do |comment| %>
         <div class="comment">
-          <strong><%= comment.user.name %>:</strong>
-          <p><%= comment.content %></p>
+
+          <strong><%= link_to comment.user.name, user_path(comment.user), class: "comment__user" %>:</strong>
+      <p><%= comment.content %></p>
         </div>
       <% end %>
     </div>
